# maple

./: .all-contributorsrc  .dockerignore  .env.example  .eslintcache  .eslintrc  .file-ops  .firebaserc  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  404.html  Contributing.md  Deployment.md  Dockerfile  Kubernetes.md  README.md  Rename-Repo-Default-Branch.md  Search.md  about.html  absentee-voting-letter.html  absentee-voting.html  advocacy-maps.html  blogConfig.yml  campaign-finance-letter.html  campaign-finance.html  chamber_status_action_type.csv  democracy-in-ma.html  democracy-maps.html  disclaimer.html  docker-compose.yml  early-mail-voting-letter.html  early-mail-voting.html  edr-letter.html  election-day-registration-new.html  election-day-registration.html  firebase.json  firestore.indexes.json  firestore.rules  globals.d.ts  (+33 more)
.github/: CODEOWNERS  FUNDING.yml
.serena/: project.yml
.storybook/: i18n.js  main.js  preview.js
_posts/: blog1.md  test.md  test2.md
actiontype_assgns/: all.csv  bill_redirect.csv  chamber_business.csv  chamber_committee.csv  committee_report.csv  engrossment.csv  first_committee.csv  laid_before_the_governor.csv  referred to committee.csv
amplify/: team-provider-info.json
analysis/: .gitignore  Readme.md  requirements.txt
api/: index.js
ballotQuestions/: 23-25.yaml  25-03.yaml  25-08.yaml  25-10.yaml  25-12.yaml  25-15.yaml  25-17.yaml  25-18.yaml  25-21.yaml  25-22.yaml
common/: common.ts  types.ts
components/: AdditionalResources.tsx  BootstrapCustomDropdownToggle.tsx  DesktopNav.tsx  Image.tsx  (+48 more)
(+2024 files in other folders)
