[tool.poetry]
name = "maple"
version = "0.1.0"
description = ""
authors = ["steele.pat@gmail.com"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.2"
peewee = "^3.15.4"
tqdm = "^4.64.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
